fixed signup reference errors

--- a/src/less/code.less
+++ b/src/less/code.less
@@ -80,7 +80,7 @@
 
     &::before {
       margin-bottom: 15px;
-      margin-left: -40px;
+
       font-size: 1.2em;
       font-family: 'CompassSans-Regular';
       width: 104%;
@@ -96,14 +96,15 @@
       padding: 8px 40px;
       margin-left: -6%;
       opacity: .8;
+      font-weight: 600 !important;
       @media(max-width: 600px) {
-        padding: 8px 40px;
+        padding: 8px 20px;
+        font-size: 1em;
       }
     }
 
     * {
       font-size: 14px;
-      /*font-family: 'DroidSansMonoSlashed', "anonymous-pro", monospace, serif;*/
       margin: 0;
       @media(max-width: 600px) {
         font-size: 12px;
@@ -118,7 +119,7 @@
 
     &::before {
       margin-bottom: 15px;
-      margin-left: -40px;
+      
       width: 110%;
       height: auto;
       background: #1d2538!important;
@@ -129,7 +130,7 @@
       text-rendering: auto;
       -webkit-font-smoothing: antialiased;
       position: relative;
-      margin-left: -40px;
+
     }
 
     .addition,
@@ -222,7 +223,7 @@
       text-rendering: auto;
       -webkit-font-smoothing: antialiased;
       position: relative;
-      margin-left: -40px;
+
     }
   }
 
@@ -359,7 +360,7 @@
 
     &::before {
       margin-bottom: 15px;
-      margin-left: -40px;
+
       width: 110%;
       height: auto;
       background: #191729;
@@ -453,7 +454,7 @@
 
     &::before {
       margin-bottom: 15px;
-      margin-left: -40px;
+
       width: 110%;
       height: auto;
       background: #121925;
@@ -471,7 +472,7 @@
   pre > .language-css {
     &::before {
       margin-bottom: 15px;
-      margin-left: -40px;
+
       width: 110%;
       height: auto;
       background: #121925;
@@ -489,7 +490,7 @@
   .language-ini {
     &::before {
       margin-bottom: 15px;
-      margin-left: -40px;
+
       width: 110%;
       height: auto;
       background: #121925;
@@ -526,7 +527,7 @@
 
     &::before {
       margin-bottom: 15px;
-      margin-left: -40px;
+
       width: 110%;
       height: auto;
       background: #14141f;
@@ -644,7 +645,7 @@
 
     &::before {
       margin-bottom: 15px;
-      margin-left: -40px;
+
       width: 110%;
       height: auto;
       background: #1a1a23;
@@ -656,7 +657,7 @@
       text-rendering: auto;
       -webkit-font-smoothing: antialiased;
       position: relative;
-      margin-left: -40px;
+
 
     }
   }
