--- a/src/less/signup.less
+++ b/src/less/signup.less
@@ -1,4 +1,4 @@
-.signup {
+#signup {
   position: fixed;
   left: 0;
   right: 0;
@@ -38,7 +38,7 @@
   margin: 0 auto auto !important;
 }
 
-.signup #logo {
+#signup #logo {
   height: 200px;
   max-width: 50px;
   position: absolute;
@@ -148,7 +148,7 @@ input[type="email"], {
   /*    opacity: 0;*/
 }
 
-.signup-form {
+#signup-form {
   position: absolute;
   left: 50%;
   top: 63%;
@@ -191,13 +191,14 @@ button {
   border-radius: 0 !important;
 }
 
-.signup-form input:focus {
+#signup-form input:focus {
   box-shadow: 0 0 15px 0 #0000000d;
   border-left: 3px solid #fff;
 }
 
 .button-control,
-button {
+button,
+#submit-account {
   padding: 13px 0;
   width: -webkit-fill-available;
   color: #fff;
@@ -259,12 +260,6 @@ input:placeholder {
   font-weight: 300;
   letter-spacing: 0.8px;
   font-family: CompassSans-Medium;
-}
-
-.float-left {
-  margin-left: 20px;
-  left: 0;
-  bottom: 3%;
 }
 
 .float-right {
