--- a/partials/signup2.hbs
+++ b/partials/signup2.hbs
@@ -15,7 +15,7 @@ function createAccount(){
 
 </script>
 
-<div class="signup un" style="visibility:hidden;">
+<div id="signup" style="visibility:hidden;">
   <svg id="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 700">
     <g id="logoGroup" transform="translate(120 232)">
       <path id="halfCircle" d="M-103.4-218.4c-15.2 16.7-14.7 42.5 1.4 58.6 16.6 16.6 43.5 16.6 60.1 0 16.1-16.1 16.6-42 1.4-58.6" fill="none" stroke="#fff" stroke-width="10" />
@@ -24,10 +24,10 @@ function createAccount(){
   </svg>
   <h2 class="signup-head" style="visibility:hidden;">SIGNUP</h2>
   <p class="description" style="visibility: hidden;">Automation is inevitable. Join the winning side.</p>
-  <p class="text_max un" style="visibility: hidden;">Step up your shitposting game.</p>
+  <p class="text_max" style="visibility: hidden;">Step up your shitposting game.</p>
 
 
-  <form id="signup-form" onsubmit="createAccount()" class="signup-form un" style="visibility:hidden;">
+  <form id="signup-form" onsubmit="createAccount()" class="signup-form" style="visibility:hidden;">
     <!--<input id="signup-username" type="text" name="username" placeholder="username" required>-->
     <input id="signup-email" type="email" name="email" autocomplete="email" placeholder="youremail@example.com" required>
     <input id="signup-gravatar" type="text" name="gravatar" visibility="hidden">
@@ -38,7 +38,7 @@ function createAccount(){
     <button id="submit-account" type="submit">Send</button>
   </form>
 
-  <div class="options un" style="visibility:hidden;">
+  <div class="options" style="visibility:hidden;">
     <!--<a class="float-left">Need help?</a>-->
     <a class="float-right">Sign In</a>
   </div>
