--- a/default.hbs
+++ b/default.hbs
@@ -11,7 +11,7 @@
 	{{! Styles }}
 	<link rel="stylesheet" type="text/css" href="{{asset "css/main.min.css"}}">
 	{{! Scripts }}
-	<script src="{{asset "/js/includes/mongo-sdk.js"}}"></script>
+	<script src="dist/main.js"></script>
 	<script async src="{{asset "/js/includes/jquery.min.js"}}"></script>
 	<script type="text/javascript" src="{{asset "/js/includes/retina.min.js"}}"></script>
 
