--- a/default.hbs
+++ b/default.hbs
@@ -11,8 +11,9 @@
 	{{! Styles }}
 	<link rel="stylesheet" type="text/css" href="{{asset "css/main.min.css"}}">
 	{{! Scripts }}
-	<script src="dist/main.js"></script>
+	<!--<script src="{{asset "/webpack/my-webpack.bundle.js"}}"></script>-->
 	<script async src="{{asset "/js/includes/jquery.min.js"}}"></script>
+	<script src="https://s3.amazonaws.com/stitch-sdks/js/bundles/4.1.1/stitch.js"></script>
 	<script type="text/javascript" src="{{asset "/js/includes/retina.min.js"}}"></script>
 
 	{{> mongodb}}
