--- a/partials/mongodb.hbs
+++ b/partials/mongodb.hbs
@@ -1,11 +1,11 @@
 <script>
 
-  /*const {
+  const {
     Stitch,
     UserPasswordAuthProviderClient,
     UserPasswordCredential,
     AnonymousCredential
-  } = Stitch;*/
+  } = stitch;
 
 
   const client = stitch.Stitch.initializeDefaultAppClient('hackers-uangn');
