--- a/partials/seriespreview.hbs
+++ b/partials/seriespreview.hbs
@@ -1,12 +1,11 @@
+<a href="{{url}}">
 <article class="{{post_class}} post-preview">
   {{#if feature_image}}
-    <a href="{{url}}" class="featured-media" href="{{url}}">
       <div class="post-card-image" style="background-image: url({{img_url feature_image}})">
         <div class="series-post-count">
           <span>Post {{@number}}</span>
         </div>
       </div>
-    </a>
   {{/if}}
   <div class="details">
     <div class="post-head">
@@ -37,6 +36,7 @@
     </div>
   </div>
 </article>
+</a>
 
 <script>
   $(document).ready(function() {
