--- a/partials/seriespreview.hbs
+++ b/partials/seriespreview.hbs
@@ -26,7 +26,7 @@
             </a>
           {{/unless}}
           {{#if profile_image}}
-            <a href="{{url}}" class="meta-item author"><img src="{{img_url profile_image}}" alt="Author image" class="avi"><span>{{name}}</span></a>
+            <a href="{{url}}" class="meta-item author"><img src="{{img_url profile_image}}" alt="Author image" class="avi"><span>{{slug}}</span></a>
             <a href="{{url}}" class="author-mobile"><img src="{{img_url profile_image}}" alt="Author image" class="avi" /></a>
             <div class="info"><span class="mobile-name">{{slug}}</span><!--<span class="mobile-date">{{date format="MMM DD"}}</span>--></div>
           {{/if}}
@@ -37,12 +37,3 @@
   </div>
 </article>
 </a>
-
-<script>
-  $(document).ready(function() {
-    $('.sort').on('click', function(e) {
-      $('.sort-method').html('asc');
-      $('.sort i').addClass('flip');
-    });
-  });
-</script>
