--- a/series.hbs
+++ b/series.hbs
@@ -12,15 +12,33 @@
 						{{> cover-tag}}
 						<div class="sort-container">
 							<div class="sort">
-								<span class="sort-title">Sort</span> <span class="sort-method">asc</span> <i class="fal fa-arrow-to-bottom"></i>
+								<span class="sort-title">Sort</span> <span class="asc">asc</span> <span class="desc">desc</span> <i class="fal fa-arrow-to-bottom"></i>
 							</div>
 							</div>
-							{{#foreach posts include="tags"}}
-									{{> seriespreview}}
-							{{/foreach}}
-							{{pagination}}
+							<div class="sorted-series">
+								{{#seriesdata}}
+								{{#foreach posts}}
+										{{> seriespreview}}
+								{{/foreach}}
+								{{/seriesdata}}
+							</div>
 						</div>
 						</div>
 					</div>
 </section>
+
+<script>
+$(document).ready(function() {
+  $('.sort').on('click', function(){
+		$('.sorted-series').toggleClass('descending');
+	});
+
+
+	$('.sort').on('click', function(e) {
+		$('.sort').toggleClass('sort-toggle');
+	});
+});
+
+
+</script>
 <!-- end site's main content area -->
