--- a/src/less/linkpreview.less
+++ b/src/less/linkpreview.less
@@ -62,6 +62,7 @@
     text-overflow: ellipsis;
     width: 100%;
     line-height: 1;
+    font-weight: 100;
     @media(max-width: 600px) {
       font-size: 12px;
     }
@@ -115,7 +116,7 @@
 
   &:hover {
     background-color: #e3e9f3;
-    cursor: zoom-in;
+    cursor: pointer;
     text-decoration: none;
   }
 }
