--- a/src/less/social.less
+++ b/src/less/social.less
@@ -89,6 +89,10 @@
   background-color: #000;
 }
 
+.btn.ycombinator:before {
+  background-color: #b75b20;
+}
+
 .btn.rss .fa {
   color: #ff6501;
 }
