--- a/src/less/searchbar.less
+++ b/src/less/searchbar.less
@@ -153,7 +153,7 @@ header{
     height: 30px;
     weight: 30px;
     min-width: 35px !important;
-    background-image: url("../../assets/images/account.png");
+    background-image: url("../../assets/images/account.svg");
     background-size: contain;
     transition: all .3s ease-out;
 
