--- a/src/less/author-card.less
+++ b/src/less/author-card.less
@@ -9,7 +9,7 @@
   border-bottom: 2px solid #dcdcdc !important;
   position: relative;
   border: 1px solid #ececec;
-  color: #505050;
+  color: #5f5f5f;
   @media(max-width: 600px) {
     width: 100%!important;
     margin: 10px auto;
@@ -32,6 +32,7 @@
 
   .meta-info {
     color: @text-color;
+    margin-bottom: 10px;
   }
   @media(max-width: 600px) {
     display: block !important;
@@ -58,7 +59,7 @@
     width: 85px;
     height: 82px;
     margin: auto;
-    top: 72px;
+    top: 80px;
     border: 3px solid white;
     box-shadow: 2px 2px 2px rgba(20, 24, 53, 0.15);
     @media(max-width: 1040px) {
@@ -82,7 +83,7 @@
     overflow: hidden;
     padding: 17px;
     text-align: center;
-    margin-top: 30px;
+    margin-top: 33px;
     margin-left: 0;
     padding-bottom: 8px;
   }
@@ -93,7 +94,7 @@
     line-height: 1.5;
     font-weight: 100;
     float: left!important;
-    font-size: 0.8em;
+    font-size: 0.85em;
     margin: 0 auto !important;
     max-width: 450px;
     padding: 0 25px 30px;
