--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -56,7 +56,7 @@
 
   iframe {
     /*box-shadow: 0 0 22px #8d9fb9;*/
-    margin-bottom: 40px;
+    margin-bottom: 30px;
     width: 100%;
     left: 0;
   }
@@ -341,6 +341,7 @@
     }
 
     h3 {
-       font-weight: 500;
-        }
+     font-weight: 500;
+      margin-bottom: 0;
+    }
   }
