--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -116,9 +116,9 @@
 						</span>
 					</a>
 
-					<a href="https://github.com/toddbirchard/onelogin-getallusers" class="github-card" data-github="toddbirchard/onelogin-getallusers">
-						<h3 class="repo-title">onelogin-getallusers</h3>
-						<p class="repo-description">Script to export all users from a Onelogin instance</p>
+					<a href="https://github.com/toddbirchard/link-embedder" class="github-card" data-github="toddbirchard/link-embedder">
+						<h3 class="repo-title">link-embedder</h3>
+						<p class="repo-description">Generates embedded link previews on all pages of an existing site.</p>
 						<span class="github-card__meta">
 							<span class="github-card__language-icon" style="color: #3572A5;">●</span> Python
 						</span>
