--- a/default.hbs
+++ b/default.hbs
@@ -33,7 +33,7 @@
 <body class="{{body_class}}">
 	{{! insert header partial}}
 	{{> newheader}}
-	{{> signup2}}
+	{{> signup}}
 
 	{{{body}}}
 </body>
