--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -11,4 +11,4 @@
 {{/is}}
 
 <script src="{{asset "/js/main.min.js"}}"></script>
-<script src="{{asset "/js/includes/ghost-search.js"}}"></script>
+<script src="{{asset "/js/includes/ghost-search.min.js"}}"></script>
