--- a/partials/signup.hbs
+++ b/partials/signup.hbs
@@ -1,23 +1,44 @@
-<div class="signup un" style="visibility:hidden;">
+<script>
+function createAccount(){
+  var email_field_signup = document.getElementById('signup-email');
+  var pass_field_signup = document.getElementById('signup-password');
+
+  emailPasswordClient.registerWithEmail(email_field_signup, pass_field_signup)
+    .then(() => {
+       console.log("Successfully sent account confirmation email!");
+    })
+    .catch(err => {
+       console.log("Error registering new user:", err);
+    });
+}
+
+
+</script>
+
+<div id="signup" style="visibility:hidden;">
   <svg id="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 700">
     <g id="logoGroup" transform="translate(120 232)">
-    <path id="halfCircle" d="M-103.4-218.4c-15.2 16.7-14.7 42.5 1.4 58.6 16.6 16.6 43.5 16.6 60.1 0 16.1-16.1 16.6-42 1.4-58.6" fill="none" stroke="#fff" stroke-width="10"/>
-    <div id="thunder"></div>
-  </g>
-</svg>
+      <path id="halfCircle" d="M-103.4-218.4c-15.2 16.7-14.7 42.5 1.4 58.6 16.6 16.6 43.5 16.6 60.1 0 16.1-16.1 16.6-42 1.4-58.6" fill="none" stroke="#fff" stroke-width="10" />
+      <div id="thunder"></div>
+    </g>
+  </svg>
   <h2 class="signup-head" style="visibility:hidden;">SIGNUP</h2>
   <p class="description" style="visibility: hidden;">Automation is inevitable. Join the winning side.</p>
-  <p class="text_max un" style="visibility: hidden;">Step up your shitposting game.</p>
+  <p class="text_max" style="visibility: hidden;">Step up your shitposting game.</p>
 
-  <form class="signup-form un" style="visibility:hidden;">
-    <!--<input id="username" class="form-control tr" placeholder="Username" type="text">-->
-    <input id="signup-email" class="form-control tr" placeholder="Email" type="text" autocomplete="email">
-    <input id="signup-password" class="form-control tr" placeholder="Password" type="password" autocomplete="new-password">
-    <input id="confirm-password" class="form-control tr" placeholder="Confirm Password" type="password" autocomplete="new-password">
-    <button type="button" id="signup-button" class="form-control button-control tr">CREATE ACCOUNT</button>
+
+  <form id="signup-form" onsubmit="createAccount()" class="signup-form" style="visibility:hidden;">
+    <!--<input id="signup-username" type="text" name="username" placeholder="username" required>-->
+    <input id="signup-email" type="email" name="email" autocomplete="email" placeholder="youremail@example.com" required>
+    <input id="signup-gravatar" type="text" name="gravatar" visibility="hidden">
+    <!--<input id="signup-subscription" type="checkbox" name="subscribe">-->
+    <!--<input id="signup-checkbox" type="checkbox" name="contact_me_by_fax_only" value="1" style="display:none !important" tabindex="-1" autocomplete="off">-->
+    <input type="password" id="password" class="form-control tr" placeholder="Password"  autocomplete="new-password" minlength="6" required>
+    <input type="password" id="confirm_password" class="form-control tr" placeholder="Confirm Password" autocomplete="new-password" minlength="6" required>
+    <button id="submit-account" type="submit">Send</button>
   </form>
 
-  <div class="options un" style="visibility:hidden;">
+  <div class="options" style="visibility:hidden;">
     <!--<a class="float-left">Need help?</a>-->
     <a class="float-right">Sign In</a>
   </div>
