cruising through stylesheets, appalled by my own styles

--- a/src/less/code.less
+++ b/src/less/code.less
@@ -1,6 +1,6 @@
 @import 'fonts.less';
 @import 'nord.less';
-/*@import 'javascript.less';*/
+
 .post-content {
   pre {
     white-space: pre-wrap;
@@ -13,8 +13,6 @@
     max-width: 100%;
     @media(max-width: 600px) {
       max-width: none;
-      /*margin-left: calc(~"-50vw + 50%") !important;
-      margin-right: calc(~"-50vw + 50%") !important;*/
       width: auto !important;
       white-space: pre-line !important;
       max-height: 400px;
@@ -80,7 +78,6 @@
 
     &::before {
       margin-bottom: 15px;
-
       font-size: 1.2em;
       font-family: 'CompassSans-Regular';
       width: 104%;
@@ -95,7 +92,7 @@
       position: relative;
       padding: 8px 40px;
       margin-left: -6%;
-      opacity: .8;
+      opacity: 0.8;
       font-weight: 600 !important;
       @media(max-width: 600px) {
         padding: 8px 20px;
@@ -119,7 +116,6 @@
 
     &::before {
       margin-bottom: 15px;
-
       width: 110%;
       height: auto;
       background: #1d2538!important;
@@ -130,7 +126,6 @@
       text-rendering: auto;
       -webkit-font-smoothing: antialiased;
       position: relative;
-
     }
 
     .addition,
@@ -223,7 +218,6 @@
       text-rendering: auto;
       -webkit-font-smoothing: antialiased;
       position: relative;
-
     }
   }
 
@@ -360,7 +354,6 @@
 
     &::before {
       margin-bottom: 15px;
-
       width: 110%;
       height: auto;
       background: #191729;
@@ -454,7 +447,6 @@
 
     &::before {
       margin-bottom: 15px;
-
       width: 110%;
       height: auto;
       background: #121925;
@@ -467,7 +459,7 @@
       position: relative;
     }
   }
-/*
+  /*
   pre > .hljs.css,
   pre > .language-css {
     &::before {
@@ -490,7 +482,6 @@
   .language-ini {
     &::before {
       margin-bottom: 15px;
-
       width: 110%;
       height: auto;
       background: #121925;
@@ -527,7 +518,6 @@
 
     &::before {
       margin-bottom: 15px;
-
       width: 110%;
       height: auto;
       background: #14141f;
@@ -645,7 +635,6 @@
 
     &::before {
       margin-bottom: 15px;
-
       width: 110%;
       height: auto;
       background: #1a1a23;
@@ -657,8 +646,6 @@
       text-rendering: auto;
       -webkit-font-smoothing: antialiased;
       position: relative;
-
-
     }
   }
 }
