--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -276,7 +276,7 @@
       width: auto;
       display: block;
       align-items: left;
-      height: -webkit-fit-available;
+      min-height: 164px;
 
       h2 {
         color: #37363e;
@@ -311,6 +311,8 @@
         text-algin: right;
         line-height: 1.5;
         margin-top: 10px;
+        position: absolute;
+        bottom: 13px;
       }
     }
   }
