--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -9,13 +9,10 @@
     background-size: cover !important;
   }
 
-  .post-title {
-    font-size: 1.6em!important;
-  }
 
   .post-title a {
-     font-size: 1em !important;
-     font-family: 'HackerSans-Medium',CompassSans-Regular;
+    font-size: 1em !important;
+    font-family: 'HackerSans-Regular',CompassSans-Regular;
   }
 }
 
@@ -30,6 +27,7 @@
     font-family: CompassSans-Regular;
   }
 }
+
 .meta,
 .post-meta,
 .tag {
@@ -40,17 +38,6 @@
     * {
       color: #69a202 !important;
     }
-/*
-    span::before {
-      font-family: "Font Awesome 5 Pro";
-      font-weight: 400;
-      content: '\f3d3';
-      display: inline-block;
-      font-style: normal;
-      font-variant: normal;
-      text-rendering: auto;
-      -webkit-font-smoothing: antialiased;
-    }*/
   }
 
   .aws {
@@ -170,8 +157,6 @@
     }
   }
 
-
-
   .datascience {
     color: #449a8c !important;
     background-color: #ccece7;
@@ -255,7 +240,7 @@
 
   .saas {
     background: #cfdcf5;
-    color:  #3d5075 !important;
+    color: #3d5075 !important;
 
     * {
       color: #3d5075 !important;
@@ -264,13 +249,10 @@
 
   .datavis {
     background: #c7f3f1;
-    color:  #5a8a8a !important;
+    color: #5a8a8a !important;
 
     * {
       color: #5a8a8a !important;
     }
   }
-
-
-
 }
