--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -306,7 +306,7 @@
 	}
 
 	#newsletter-sidebar {
-		.form-group {
+		.newsletter-form {
 
 			input[type="text"],
 			input[type="email"] {
@@ -721,6 +721,7 @@
 			width: 90%;
 			font-size: 14px;
 			border: 1px solid #ebebeb;
+			margin-bottom: 10px;
 		}
 
 		.form-group,
