--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -79,7 +79,7 @@
 			}
 
 			input[type=email] {
-				margin-bottom: 0;
+				margin-bottom: 10px;
 
 				&:hover {
 					background: #e5f9ff !important;
@@ -126,7 +126,6 @@
 				margin-bottom: 0;
 				padding: 14px 15px;
 				border: 0;
-				border-radius: 3px;
 				background: #fff;
 				color: #fff;
 				font-size: 13px;
