--- a/src/less/series.less
+++ b/src/less/series.less
@@ -1,29 +1,26 @@
 .series-template {
-
   .postlist {
-    @media (max-width: 800px){
+    @media (max-width: 800px) {
       width: 100%;
       margin: 0 6%;
       padding: 0;
     }
   }
 
-  .main-content{
-    @media (max-width: 800px){
-        width: 90%;
-      }
+  .main-content {
+    @media (max-width: 800px) {
+      width: 90%;
+    }
   }
 
-  .sorted-series{
+  .sorted-series {
     display: flex;
     flex-direction: column;
   }
 
   .descending {
-    flex-direction:column-reverse;
+    flex-direction: column-reverse;
   }
-
-
 
   article {
     @media(max-width:800px) {
@@ -59,7 +56,7 @@
       transform: rotate(180deg) !important;
     }
   }
-
+  /* Bar which sorts articles */
   .sort-container {
     display: block;
     width: 97%;
@@ -93,19 +90,11 @@
     }
   }
 
-
-
   article {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     margin-bottom: 20px;
-
-    .featured-media {
-      margin: 0;
-      height: auto;
-      width: auto;
-    }
 
     .featured-media {
       margin: 0;
@@ -132,23 +121,21 @@
       color: #fff;
       font-family: 'CompassSans-Medium';
       box-shadow: 1px 1px 1px rgba(67, 67, 84, .9);
-          line-height: 1;
+      line-height: 1;
     }
 
     .details {
       width: -webkit-fill-available;
       padding: 20px;
-
-      @media(max-width: 800px){
+      @media(max-width: 800px) {
         max-width: -webkit-fill-available;
-      }
-
-      @media(max-width: 600px){
-        padding: 10px 20px;
       }
 
       .meta {
         max-width: 390px;
+        position: absolute;
+        bottom: 20px;
+
         .info {
           display: none;
         }
@@ -168,14 +155,12 @@
           font-size: 1.3em;
 
           a {
-            font-size: .9em;
-
+            font-size: 0.9em;
             @media(max-width: 600px) {
               font-size: 0.85em;
               font-family: 'HackerSans-Regular','CompassSans-Light',sans-serif;
             }
           }
-
           @media(max-width: 600px) {
             width: -webkit-fill-available;
             overflow: hidden;
@@ -185,12 +170,15 @@
         .post-excerpt {
           color: #153b52;
           font-family: 'HackerSans-Regular','CompassSans-Regular',serif;
-          font-size: 1em;
+          font-size: 0.9em;
           font-weight: 100;
           line-height: 1.21;
           text-align: left;
           display: block;
           white-space: pre-wrap;
+          @media(max-width: 600px) {
+            display: none;
+          }
         }
 
         .postcount {
@@ -206,29 +194,24 @@
         }
 
         .author span {
-              text-transform: capitalize;
+          text-transform: capitalize;
         }
       }
     }
 
     .post-card-image {
-      min-width: 250px;
+      min-width: 200px;
       height: 175px;
       margin: 0;
       background-size: cover;
       background-position: center;
       @media(max-width: 600px) {
-        min-width: 220px;
         height: 150px;
-      }
-
-      @media(max-width: 600px) {
         background-position-x: center;
         background-size: cover;
         max-width: -webkit-fill-available !important;
         width: -webkit-fill-available !important;
         min-width: 150px;
-        width: -webkit-fill-available !important;
 
         a {
           display: block;
