--- a/partials/signup.hbs
+++ b/partials/signup.hbs
@@ -3,16 +3,16 @@ function createAccount(){
   var email_field_signup = document.getElementById('signup-email');
   var pass_field_signup = document.getElementById('signup-password');
 
-  emailPasswordClient.registerWithEmail(email_field_signup, pass_field_signup)
-    .then(() => {
-       console.log("Successfully sent account confirmation email!");
-    })
-    .catch(err => {
-       console.log("Error registering new user:", err);
-    });
+  var email = email_field_signup.value
+  var password = pass_field_signup.value
+
+  firebase.auth().createUserWithEmailAndPassword(email, password).catch(function(error) {
+    // Handle Errors here.
+    var errorCode = error.code;
+    var errorMessage = error.message;
+    // ...
+});
 }
-
-
 </script>
 
 <div id="signup" style="visibility:hidden;">
@@ -33,7 +33,7 @@ function createAccount(){
     <input id="signup-gravatar" type="text" name="gravatar" visibility="hidden">
     <!--<input id="signup-subscription" type="checkbox" name="subscribe">-->
     <!--<input id="signup-checkbox" type="checkbox" name="contact_me_by_fax_only" value="1" style="display:none !important" tabindex="-1" autocomplete="off">-->
-    <input type="password" id="password" class="form-control tr" placeholder="Password"  autocomplete="new-password" minlength="6" required>
+    <input type="password" id="signup-password" class="form-control tr" placeholder="Password"  autocomplete="new-password" minlength="6" required>
     <input type="password" id="confirm_password" class="form-control tr" placeholder="Confirm Password" autocomplete="new-password" minlength="6" required>
     <button id="submit-account" type="submit">Send</button>
   </form>
