--- a/partials/signup.hbs
+++ b/partials/signup.hbs
@@ -1,4 +1,4 @@
-<script src="https://cdn.firebase.com/libs/firebaseui/3.5.0/firebaseui.js"></script>
+<!--<script src="https://cdn.firebase.com/libs/firebaseui/3.5.0/firebaseui.js"></script>
 <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.0/firebaseui.css" />
 <script type="text/javascript">
   // FirebaseUI config.
@@ -43,7 +43,7 @@ function createAccount(){
     // ...
 });
 }
-</script>
+</script>-->
 
 <div id="signup" style="visibility:hidden;">
   <svg id="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 700">
@@ -56,8 +56,7 @@ function createAccount(){
   <p class="description" style="visibility: hidden;">Automation is inevitable. Join the winning side.</p>
   <p class="text_max" style="visibility: hidden;">Step up your shitposting game.</p>
 
-
-  <form id="signup-form" onsubmit="createAccount()" class="signup-form" style="visibility:hidden;">
+  <form id="signup-form" action="https://getform.io/f/f475106e-c578-418d-b299-48f97233c840" method="POST" enctype="multipart/form-data" class="signup-form" style="visibility:hidden;">
     <!--<input id="signup-username" type="text" name="username" placeholder="username" required>-->
     <input id="signup-email" type="email" name="email" autocomplete="email" placeholder="youremail@example.com" required>
     <input id="signup-gravatar" type="text" name="gravatar" visibility="hidden">
