--- a/partials/signup.hbs
+++ b/partials/signup.hbs
@@ -55,15 +55,14 @@ function createAccount(){
   <h2 class="signup-head" style="visibility:hidden;">SIGNUP</h2>
   <p class="description" style="visibility: hidden;">Automation is inevitable. Join the winning side.</p>
   <p class="text_max" style="visibility: hidden;">Step up your shitposting game.</p>
-
   <form id="signup-form" action="https://getform.io/f/f475106e-c578-418d-b299-48f97233c840" method="POST" enctype="multipart/form-data" class="signup-form" style="visibility:hidden;">
-    <!--<input id="signup-username" type="text" name="username" placeholder="username" required>-->
+  <input id="signup-username" type="text" name="username" placeholder="username" required>
     <input id="signup-email" type="email" name="email" autocomplete="email" placeholder="youremail@example.com" required>
     <input id="signup-gravatar" type="text" name="gravatar" visibility="hidden">
     <!--<input id="signup-subscription" type="checkbox" name="subscribe">-->
     <!--<input id="signup-checkbox" type="checkbox" name="contact_me_by_fax_only" value="1" style="display:none !important" tabindex="-1" autocomplete="off">-->
-    <input type="password" id="signup-password" class="form-control tr" placeholder="Password"  autocomplete="new-password" minlength="6" required>
-    <input type="password" id="confirm_password" class="form-control tr" placeholder="Confirm Password" autocomplete="new-password" minlength="6" required>
+    <!--<input type="password" id="signup-password" class="form-control tr" placeholder="Password"  autocomplete="new-password" minlength="6" required>
+    <input type="password" id="confirm_password" class="form-control tr" placeholder="Confirm Password" autocomplete="new-password" minlength="6" required>-->
     <button id="submit-account" type="submit">Send</button>
   </form>
 
