--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -1,5 +1,5 @@
 <!-- scripts -->
-<script src="https://www.gstatic.com/firebasejs/5.7.0/firebase-app.js"></script>
+<!--<script src="https://www.gstatic.com/firebasejs/5.7.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.7.0/firebase-auth.js"></script>
 <script>
   // Initialize Firebase
@@ -30,7 +30,7 @@
     // ...
   }
 });
-</script>
+</script>-->
 <script src="{{asset "/js/includes/TweenMax-1-18-0.min.js"}}"></script>
 {{#is "post"}}
   <script src="{{asset "/js/includes/scrollbooster.min.js"}}"></script>
