--- a/src/less/code.less
+++ b/src/less/code.less
@@ -649,3 +649,12 @@
     }
   }
 }
+
+blockquote .language-python {
+  width: 92%;
+  margin:auto;
+  &::before {
+    background: #063852 !important
+    }
+  background: #235171!important
+}
