--- a/src/less/post.less
+++ b/src/less/post.less
@@ -52,7 +52,7 @@
 		line-height: 1.2;
 		display: block;
 		font-family: 'HackerSans-Medium', 'CompassSans-Medium' !important;
-		font-size: 2.5em;
+		font-size: 2.2em;
 		font-weight: 600;
 		color: @h1-color;
 		letter-spacing: 1px;
@@ -87,11 +87,11 @@
 
 	.excerpt {
 		font-weight: 100;
-		font-size: 1.4em;
+		font-size: 1.2em;
 		margin: 10px 60px 25px;
-		line-height: 1.2;
+		line-height: 1.3;
 		color: @h1-color;
-		font-family: 'HackerSans-Medium', 'CompassSans-Regular';
+		font-family: 'HackerSans-Regular', 'CompassSans-Regular';
 		@media(max-width: 800px) {
 			 margin: 10px 60px 40px;
 		}
@@ -561,8 +561,8 @@
 		}
 
 		blockquote {
-			border-left: 4px solid #26a2c7;
-			background: #e0eef3;
+			border-left: 4px solid #9ec4d0;
+			background: #e9f3f7;
 			color: #32687b;
 			padding: 20px;
 			font-family: 'CompassSans-Regular',sans-serif;
@@ -573,6 +573,10 @@
 			margin: 20px auto;
 			max-width: 88%;
 			font-style: italic;
+
+			p{
+				margin-botom: 0;
+			}
 
 			* {
 				font-family: CompassSans-Regular,sans-serif;
@@ -859,6 +863,7 @@
 		}
 
 		img {
+			width: 100%;
 			@media(max-width: 600px) {
 				margin-bottom: -5px !important;
 			}
