--- a/src/less/author-card.less
+++ b/src/less/author-card.less
@@ -2,7 +2,7 @@
 
 .author-card-small {
   border-radius: 2px !important;
-  background: #f6fbfd !important;
+  background: #fff !important;
   padding: 0;
   margin: 10px 0;
   border-right: 2px solid #dcdcdc!important;
